# midi-daemon

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  config.toml  flake.nix
TouchOSC/: ComplexSetup.tosc  VolumePanMuteControl.tosc  metronome.tosc
memory/: MEMORY.md  project_use_case.md  user_profile.md
nix/: module.nix  package.nix
routes.d/: VolumePanMuteControl.lua  keyboard-split.lua  metronome.lua  osc-bridge.lua  timing-trainer.lua  transpose.lua  two-input-two-output.lua
src/: alsa_connect.rs  config.rs  lua_api.rs  lua_stdlib_tests.rs  main.rs  osc.rs  osc_params.rs  route.rs  timer.rs
src/lua/: stdlib.lua
systemd/: midi-daemon-system.service  midi-daemon.service
systemd/arch/: midi-daemon.service  sysusers.conf
