[package]
name = "midi-daemon"
version = "0.4.8"
edition = "2021"
description = "A Lua-scriptable MIDI routing daemon"
license = "BSD-3-Clause"
repository = "https://github.com/rickprice/midi-daemon"
readme = "README.md"
authors = ["Frederick Price <fprice@pricemail.ca>"]

[[bin]]
name = "midi-daemon"
path = "src/main.rs"

[dependencies]
mlua      = { version = "0.10", features = ["lua54", "vendored", "send"] }
midir     = "0.10"
spin_sleep = "1"
notify    = "7"
serde     = { version = "1", features = ["derive"] }
toml      = "0.8"
tokio     = { version = "1", features = ["full"] }
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow    = "1"
dirs      = "5"
alsa = "0.9"
regex = "1.12.3"
rosc = "0.10"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
